--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,12 @@ body{
 }
 
 #container{
-	background: #333333;
+	background: #00bfff;
 	margin: 50px auto;
 	overflow: auto;
 	width: 60%;
 	min-height: 400px;
+	border-radius: 5px;
 }
 
 header h1{
@@ -31,12 +32,15 @@ header h1{
 	margin: 20px auto;
 	height: 400px;
 	overflow: auto;
+	border-radius: 5px;
+
 }
 
 .shout{
 	list-style: none;
 	padding: 8px;
 	border-bottom:1px #cccccc dotted;
+	border-radius: 5px;
 }
 
 .shout span{
@@ -61,6 +65,8 @@ header h1{
 	padding: 3px;
 	margin-bottom: 20px;
 	border:#666666 solid 1px;
+	border-radius: 5px;
+	border: none;
 }
 
 #input .shout-btn{
@@ -68,6 +74,23 @@ header h1{
 	width: 100%;
 	margin: 10px auto;
 	margin-bottom: 30px;
+	background-color: #ffffff;
+	color: #00bfff;
+	box-shadow: none;
+	border: none;
+}
+
+#input .shout-btn:hover{
+	background-color:#007fff ;
+	color: #ffffff;
+}
+
+.error{
+	background: blue;
+	color: white;
+	margin-bottom: 10px;
+	padding: 5px;
+	border-radius: 5px;
 }
 
 @media only screen and (max-width:940px){
